# cvclasses16

./: .gitignore  README.md  cvclasses16.sln  index.html  params.json
lectures/: 01.html  lecture.html
lesson1/: CMakeLists.txt  LaplacianEdgeDetector.cpp  LaplacianEdgeDetector.h  lesson1.cpp  lesson1.vcxproj  lesson1.vcxproj.filters
lesson2/: gmm.cpp  graphcut.cpp  iterOptThreshold.cpp  kmeans.cpp  lesson2.vcxproj  lesson2.vcxproj.filters  main.cpp  otsuthreshold.cpp  splitAndMerge.cpp  watershed.cpp
lesson3/: PrecRec.m  edge_threshold.m  lesson3.vcxproj  main.cpp  main.m  plot_metrics.m
lesson4/: SegmentMotion1G.cpp  SegmentMotion1G.h  SegmentMotionBU.cpp  SegmentMotionBU.h  SegmentMotionBase.cpp  SegmentMotionBase.h  SegmentMotionDiff.cpp  SegmentMotionDiff.h  SegmentMotionGMM.cpp  SegmentMotionGMM.h  SegmentMotionMeanFilter.cpp  SegmentMotionMeanFilter.h  SegmentMotionMedian.cpp  SegmentMotionMedian.h  SegmentMotionMinMax.cpp  SegmentMotionMinMax.h  ViBe.cpp  ViBe.h  ViBeDemo.cpp  caclMertrick.m  lesson4.vcxproj  lesson4.vcxproj.filters  main.cpp  plot_metrics.m
lesson5/: FeatureDetectorBase.cpp  FeatureDetectorBase.h  FeatureDetectorDemo.cpp  FeatureDetectorDemo.h  FeatureDetectorHarris.cpp  FeatureDetectorHarris.h  FeatureDetectorLoG.cpp  FeatureDetectorLoG.h  lesson5.vcxproj  lesson5.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
lesson6/: demosift.cpp  demosift.h  lesson6.vcxproj  lesson6.vcxproj.filters  main.cpp
lesson7/: IObjectTracking.cpp  IObjectTracking.h  ObjectTrackingLK.cpp  ObjectTrackingLK.h  ObjectTrackingSTK.cpp  ObjectTrackingSTK.h  (+8 more)
